--- a/index.html
+++ b/index.html
@@ -7,18 +7,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Fixed Education Sidebar -->
-    <aside class="education-sidebar">
-        <h3>Education</h3>
-        <div class="edu-item">
-            <h4>USC</h4>
-            <p class="edu-degree">MS Financial Engineering</p>
-            <p class="edu-meta">GPA 3.9 · Dec 2026</p>
+    <!-- Fixed Sidebar -->
+    <aside class="info-sidebar">
+        <div class="sidebar-section">
+            <h3>Education</h3>
+            <div class="sidebar-item">
+                <h4>USC</h4>
+                <p class="sidebar-meta">Dec 2026</p>
+            </div>
+            <div class="sidebar-item">
+                <h4>ESCP</h4>
+                <p class="sidebar-meta">2024</p>
+            </div>
         </div>
-        <div class="edu-item">
-            <h4>ESCP</h4>
-            <p class="edu-degree">BS Finance</p>
-            <p class="edu-meta">GPA 3.7 · 2024</p>
+        
+        <div class="sidebar-section">
+            <h3>Experience</h3>
+            <div class="sidebar-item">
+                <h4>Numerai</h4>
+                <p class="sidebar-meta">2025 – Present</p>
+            </div>
+            <div class="sidebar-item">
+                <h4>DEFINEX</h4>
+                <p class="sidebar-meta">Apr – Sep 2024</p>
+            </div>
+            <div class="sidebar-item">
+                <h4>Euronext</h4>
+                <p class="sidebar-meta">May – Nov 2023</p>
+            </div>
+            <div class="sidebar-item">
+                <h4>Deloitte</h4>
+                <p class="sidebar-meta">May – Aug 2022</p>
+            </div>
         </div>
     </aside>
 
