--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
             <h3>Education</h3>
             <div class="sidebar-item">
                 <h4>USC</h4>
+                <p class="sidebar-role">MS Financial Eng.</p>
                 <p class="sidebar-meta">Dec 2026</p>
             </div>
             <div class="sidebar-item">
                 <h4>ESCP</h4>
+                <p class="sidebar-role">BS Finance</p>
                 <p class="sidebar-meta">2024</p>
             </div>
         </div>
@@ -25,18 +27,22 @@
             <h3>Experience</h3>
             <div class="sidebar-item">
                 <h4>Numerai</h4>
-                <p class="sidebar-meta">2025 – Present</p>
+                <p class="sidebar-role">Quant Researcher</p>
+                <p class="sidebar-meta">May 2025 – Present</p>
             </div>
             <div class="sidebar-item">
                 <h4>DEFINEX</h4>
+                <p class="sidebar-role">Prompt Engineer</p>
                 <p class="sidebar-meta">Apr – Sep 2024</p>
             </div>
             <div class="sidebar-item">
                 <h4>Euronext</h4>
+                <p class="sidebar-role">Custody Intern</p>
                 <p class="sidebar-meta">May – Nov 2023</p>
             </div>
             <div class="sidebar-item">
                 <h4>Deloitte</h4>
+                <p class="sidebar-role">Junior Analyst</p>
                 <p class="sidebar-meta">May – Aug 2022</p>
             </div>
         </div>
@@ -80,6 +86,7 @@
                 <div class="about-text">
                     <p>Driven by curiosity about market behavior, I'm a Financial Engineering student at USC focused on applying data analysis to financial markets. The race to find alpha excites me—discovering patterns in regime shifts, volatility surfaces, or cross-sectional equity signals that translate to real trading strategies.</p>
                     <p>I'm drawn to the challenge of building models that work not just in backtest but in live markets with transaction costs and changing regimes. My interests span systematic equity research, fixed income modeling, and derivatives pricing. I see myself in quantitative research roles where statistical rigor meets practical trading constraints.</p>
+                    <a href="https://github.com/mcravi8/matteocraviotto-portfolio/raw/main/Matteo_Craviotto_CV.pdf" class="cv-download" target="_blank">Download CV →</a>
                 </div>
                 <div class="skills-box">
                     <h3>Technical Skills</h3>
@@ -110,7 +117,7 @@
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Macro Regime Duration Model</h3>
-                        <a href="https://github.com/mcravi8" target="_blank" class="project-link">GitHub →</a>
+                        <a href="https://github.com/mcravi8/macro_regime_duration" target="_blank" class="project-link">GitHub →</a>
                     </div>
                     <p class="project-tech">Python · statsmodels · Markov-switching · Nelson-Siegel VAR</p>
                     <p class="project-desc">Built 3-state Markov-switching model detecting latent Recession/Growth/Expansion regimes in GDP, inflation, and unemployment. Integrated yield-curve forecast with regime-conditioned mean-variance optimizer.</p>
@@ -133,7 +140,7 @@
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Delta-Neutral Options Market-Making Simulator</h3>
-                        <a href="https://github.com/mcravi8" target="_blank" class="project-link">GitHub →</a>
+                        <a href="https://github.com/mcravi8/opt_mm_sim" target="_blank" class="project-link">GitHub →</a>
                     </div>
                     <p class="project-tech">Python · Black-Scholes · LightGBM · cvxpy · Streamlit</p>
                     <p class="project-desc">Minute-level NBBO-aware delta-neutral simulator with BS theoretical pricing, Greeks calculation, and put-call parity residual tracking. Features asymmetric spreads with inventory lean and delta-band hedging.</p>
@@ -175,7 +182,7 @@
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Options Parity Checker</h3>
-                        <a href="https://github.com/mcravi8" target="_blank" class="project-link">GitHub →</a>
+                        <a href="https://github.com/mcravi8/OptionsParityChecker_yfinance" target="_blank" class="project-link">GitHub →</a>
                     </div>
                     <p class="project-tech">Python · Options Pricing · Real-time Data</p>
                     <p class="project-desc">Real-time arbitrage detection tool for put-call parity violations across options chains.</p>
@@ -184,7 +191,7 @@
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Post-Earnings Drift Backtest</h3>
-                        <a href="https://github.com/mcravi8" target="_blank" class="project-link">GitHub →</a>
+                        <a href="https://github.com/mcravi8/PEAD-mini-WRDS" target="_blank" class="project-link">GitHub →</a>
                     </div>
                     <p class="project-tech">Python · Event Study · Statistical Analysis</p>
                     <p class="project-desc">Systematic analysis of post-earnings announcement drift patterns across market cap segments.</p>
@@ -208,7 +215,7 @@
                                 <p class="role">Quantitative Researcher</p>
                             </div>
                             <div class="timeline-meta">
-                                <span class="date">2025 – Present</span>
+                                <span class="date">May 2025 – Present</span>
                                 <span class="location">Los Angeles, CA</span>
                             </div>
                         </div>
