--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 Matteo Craviotto · Built with focus on clean design and quantitative depth</p>
+            <p>© 2025 Matteo Craviotto
         </div>
     </footer>
 </body>
