--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="about-text">
                     <p>Driven by curiosity about market behavior, I'm a Financial Engineering student at USC focused on applying data analysis to financial markets. The race to find alpha excites me—discovering patterns in regime shifts, volatility surfaces, or cross-sectional equity signals that translate to real trading strategies.</p>
                     <p>I'm drawn to the challenge of building models that work not just in backtest but in live markets with transaction costs and changing regimes. My interests span systematic equity research, fixed income modeling, and derivatives pricing. I see myself in quantitative research roles where statistical rigor meets practical trading constraints.</p>
-                    <a href="https://github.com/mcravi8/matteocraviotto-portfolio/raw/main/atteo_Craviotto_CV.pdf" class="cv-download" target="_blank">Download CV →</a>
+                    <a href="https://github.com/mcravi8/matteocraviotto-portfolio/raw/main/MC.CV.pdf" class="cv-download" target="_blank">Download CV →</a>
                 </div>
                 <div class="skills-box">
                     <h3>Technical Skills</h3>
