--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Matteo Craviotto</h1>
-            <p class="hero-subtitle">Quantitative Researcher specializing in machine learning alpha signals, regime modeling, and derivatives pricing</p>
+            <p class="hero-subtitle">I am passionate about leveraging technology and quantitative methods to drive innovation through investment solutions.</p>
             <div class="hero-links">
                 <a href="#projects" class="btn-primary">View Projects</a>
                 <a href="#contact" class="btn-secondary">Get in Touch</a>
@@ -135,6 +135,7 @@
                             <span class="metric-label">Regime Persistence</span>
                         </div>
                     </div>
+                    <a href="macro-regime-model.html" class="project-details-btn">See Details →</a>
                 </div>
 
                 <div class="project-card">
@@ -154,6 +155,7 @@
                             <span class="metric-label">Fills (800-min test)</span>
                         </div>
                     </div>
+                    <a href="options-mm-simulator.html" class="project-details-btn">See Details →</a>
                 </div>
 
                 <div class="project-card">
@@ -177,6 +179,7 @@
                             <span class="metric-label">Eras Tested</span>
                         </div>
                     </div>
+                    <a href="numerai-alpha.html" class="project-details-btn">See Details →</a>
                 </div>
 
                 <div class="project-card">
@@ -186,6 +189,7 @@
                     </div>
                     <p class="project-tech">Python · Options Pricing · Real-time Data</p>
                     <p class="project-desc">Real-time arbitrage detection tool for put-call parity violations across options chains.</p>
+                    <a href="options-parity.html" class="project-details-btn">See Details →</a>
                 </div>
 
                 <div class="project-card">
@@ -195,6 +199,7 @@
                     </div>
                     <p class="project-tech">Python · Event Study · Statistical Analysis</p>
                     <p class="project-desc">Systematic analysis of post-earnings announcement drift patterns across market cap segments.</p>
+                    <a href="pead-backtest.html" class="project-details-btn">See Details →</a>
                 </div>
             </div>
         </div>
