--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Macro Regime Duration Model</h3>
-                        <a href="https://github.com/mcravi8/macro_regime_duration" target="_blank" class="project-link">GitHub →</a>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8/macro_regime_duration" target="_blank" class="project-link">GitHub →</a>
+                            <a href="macro-regime-model.html" class="project-link">See Details →</a>
+                        </div>
                     </div>
                     <p class="project-tech">Python · statsmodels · Markov-switching · Nelson-Siegel VAR</p>
                     <p class="project-desc">Built 3-state Markov-switching model detecting latent Recession/Growth/Expansion regimes in GDP, inflation, and unemployment. Integrated yield-curve forecast with regime-conditioned mean-variance optimizer.</p>
@@ -135,13 +138,15 @@
                             <span class="metric-label">Regime Persistence</span>
                         </div>
                     </div>
-                    <a href="macro-regime-model.html" class="project-details-btn">See Details →</a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Delta-Neutral Options Market-Making Simulator</h3>
-                        <a href="https://github.com/mcravi8/opt_mm_sim" target="_blank" class="project-link">GitHub →</a>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8/opt_mm_sim" target="_blank" class="project-link">GitHub →</a>
+                            <a href="options-mm-simulator.html" class="project-link">See Details →</a>
+                        </div>
                     </div>
                     <p class="project-tech">Python · Black-Scholes · LightGBM · cvxpy · Streamlit</p>
                     <p class="project-desc">Minute-level NBBO-aware delta-neutral simulator with BS theoretical pricing, Greeks calculation, and put-call parity residual tracking. Features asymmetric spreads with inventory lean and delta-band hedging.</p>
@@ -155,13 +160,15 @@
                             <span class="metric-label">Fills (800-min test)</span>
                         </div>
                     </div>
-                    <a href="options-mm-simulator.html" class="project-details-btn">See Details →</a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Numerai ML Alpha Signals</h3>
-                        <a href="https://github.com/mcravi8" target="_blank" class="project-link">GitHub →</a>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8" target="_blank" class="project-link">GitHub →</a>
+                            <a href="numerai-alpha.html" class="project-link">See Details →</a>
+                        </div>
                     </div>
                     <p class="project-tech">Python · LightGBM · Purged CV · Feature Engineering</p>
                     <p class="project-desc">Developed cross-sectional ML alpha signals on ~280M rows and 2.4k features for market-neutral 20-day return forecasts. Deployed live in Numerai's hedge fund with automated weekly retraining.</p>
@@ -179,27 +186,30 @@
                             <span class="metric-label">Eras Tested</span>
                         </div>
                     </div>
-                    <a href="numerai-alpha.html" class="project-details-btn">See Details →</a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Options Parity Checker</h3>
-                        <a href="https://github.com/mcravi8/OptionsParityChecker_yfinance" target="_blank" class="project-link">GitHub →</a>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8/OptionsParityChecker_yfinance" target="_blank" class="project-link">GitHub →</a>
+                            <a href="options-parity.html" class="project-link">See Details →</a>
+                        </div>
                     </div>
                     <p class="project-tech">Python · Options Pricing · Real-time Data</p>
                     <p class="project-desc">Real-time arbitrage detection tool for put-call parity violations across options chains.</p>
-                    <a href="options-parity.html" class="project-details-btn">See Details →</a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Post-Earnings Drift Backtest</h3>
-                        <a href="https://github.com/mcravi8/PEAD-mini-WRDS" target="_blank" class="project-link">GitHub →</a>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8/PEAD-mini-WRDS" target="_blank" class="project-link">GitHub →</a>
+                            <a href="pead-backtest.html" class="project-link">See Details →</a>
+                        </div>
                     </div>
                     <p class="project-tech">Python · Event Study · Statistical Analysis</p>
                     <p class="project-desc">Systematic analysis of post-earnings announcement drift patterns across market cap segments.</p>
-                    <a href="pead-backtest.html" class="project-details-btn">See Details →</a>
                 </div>
             </div>
         </div>
