--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
                             </div>
                         </div>
                         <ul>
-                            [cite_start]<li>Performed rigorous backtesting & walk-forward optimization on QuantConnect with slippage, commissions, and regime filters [cite: 21]</li>
-                            [cite_start]<li>Developed a proprietary, fully autonomous multi-regime strategy leveraging value and momentum signals, protected by macro-driven filters [cite: 23]</li>
-                            [cite_start]<li>Designing advanced predictive models using ARIMA/GARCH for next-day return forecasting across equities and forex [cite: 24]</li>
+                            <li>Performed rigorous backtesting & walk-forward optimization on QuantConnect with slippage, commissions, and regime filters</li>
+                            <li>Developed a proprietary, fully autonomous multi-regime strategy leveraging value and momentum signals, protected by macro-driven filters</li>
+                            <li>Designing advanced predictive models using ARIMA/GARCH for next-day return forecasting across equities and forex</li>
                         </ul>
                     </div>
                 </div>
@@ -255,9 +255,9 @@
                             </div>
                         </div>
                         <ul>
-                            [cite_start]<li>Developed cross-sectional ML alpha signals on ~280M rows and 2.4k features, generating market-neutral 20-day return forecasts [cite: 29]</li>
-                            [cite_start]<li>Achieved robust validation performance (CORR ≈ 0.039, Sharpe ≈ 1.38) using LightGBM with purged time-series validation [cite: 30]</li>
-                            [cite_start]<li>Deployed live signals to Numerai hedge fund (forward Sharpe ≈ 0.64 ongoing) [cite: 31]</li>
+                            <li>Developed cross-sectional ML alpha signals on ~280M rows and 2.4k features, generating market-neutral 20-day return forecasts</li>
+                            <li>Achieved robust validation performance (CORR ≈ 0.039, Sharpe ≈ 1.38) using LightGBM with purged time-series validation</li>
+                            <li>Deployed live signals to Numerai hedge fund (forward Sharpe ≈ 0.64 ongoing)</li>
                         </ul>
                     </div>
                 </div>
