--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <aside class="info-sidebar" style="top: 200px;">
+    <aside class="info-sidebar">
         <div class="sidebar-section">
             <h3>Education</h3>
             <div class="sidebar-item">
