--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <aside class="info-sidebar" style="top: 425px;">
+    <aside class="info-sidebar" style="top: 200px;">
         <div class="sidebar-section">
             <h3>Education</h3>
             <div class="sidebar-item">
@@ -86,18 +86,18 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>Driven by curiosity about market behavior, I'm a Financial Engineering student at USC focused on applying data analysis to financial markets. The race to find alpha excites me—discovering patterns in regime shifts, volatility surfaces, or cross-sectional equity signals that translate to real trading strategies.</p>
-                    <p>I'm drawn to the challenge of building models that work not just in backtest but in live markets with transaction costs and changing regimes. My interests span systematic equity research, fixed income modeling, and derivatives pricing. I see myself in quantitative research roles where statistical rigor meets practical trading constraints.</p>
-                    <a href="https://github.com/mcravi8/matteocraviotto-portfolio/raw/main/MC.CV.pdf" class="cv-download" target="_blank">Download CV →</a>
+                    <p>I'm drawn to the challenge of building models that work not just in backtest but in live markets with transaction costs and changing regimes. I see myself in quantitative research / trading roles where statistical rigor meets practical trading constraints. My interests span systematic equity research, fixed income modeling, and derivatives pricing.</p>
+                    <a href="https://github.com/mcravi8/matteocraviotto-portfolio/raw/main/cv.MatteoCraviotto.pdf" class="cv-download" target="_blank">Download CV →</a>
                 </div>
                 <div class="skills-box">
                     <h3>Technical Skills</h3>
                     <div class="skill-category">
                         <h4>Finance & Methods</h4>
-                        <p>Time-series modeling · Portfolio optimization · Risk modeling (VaR, Monte Carlo) · Derivatives pricing · Regime detection</p>
+                        <p>Time-series forecasting (ARIMA/ARMA/GARCH) · Portfolio optimization · Risk management · Derivatives pricing</p>
                     </div>
                     <div class="skill-category">
                         <h4>Programming & Tools</h4>
-                        <p>Python · C++ · SQL · Git</p>
+                        <p>Python · C++ · SQL · Git · Pine Script · Excel/VBA</p>
                     </div>
                     <div class="skill-category">
                         <h4>Libraries</h4>
