--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 Matteo Craviotto · Built with focus on clean design and quantitative depth</p>
+            <p>© 2025 Matteo Craviotto</p>
         </div>
     </footer>
 </body>
